fix: jump bug when opening modal

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -5,6 +5,10 @@
 @import "themes/light";
 @import "themes/dark";
 
+html {
+    scrollbar-gutter: stable;
+}
+
 body {
     overflow-x: hidden;
     font: var(--font-m);
