--- a/src/shared/ui/Popups/ui/Dropdown/Dropdown.module.scss
+++ b/src/shared/ui/Popups/ui/Dropdown/Dropdown.module.scss
@@ -2,9 +2,9 @@
     display: flex;
     flex-direction: column;
     z-index: var(--popup-z-index);
-    border-radius: 8px;
+    border-radius: var(--border-xs-radius);
     position: absolute;
-    background: var(--bg-color);
+    background: var(--secondary-color);
     border: 1px solid var(--primary-color);
 }
 
@@ -12,4 +12,6 @@
     width: 100%;
     cursor: pointer;
     padding: 10px 25px;
+    font: var(--font-s);
+    background-color: var(--bg-color);
 }
